<resources>
    <string name="app_name">I HATE MONDAYS!</string>
    <string name="action_settings">Settings</string>
    <string name="exit_button">EXIT</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="location_updated_message">Location updated</string>
    <string name="your_address_text"><u><b>Your Current Location:</b></u></string>
    <string name="enter_address_text">Enter Address:</string>
    <string name="enter_city_text">Enter City:</string>
    <string name="enter_state_text">Enter State:</string>
    <string name="enter_zip_text">Enter Zip Code:</string>
    <string name="results_title">RESULTS:</string>
    <string name="enter_data_title">ENTER YOUR FAVORITE DESTINATION:</string>

    <string name="get_weather_button">GET MY WEATHER!!</string>
    <string name="get_travel_button">GET TRAVEL INFO!!</string>
    <string name="get_news_button">GET WORLD NEWS!!</string>
    <string name="enter_destination_button">ENTER YOUR DESTINATION</string>

</resources>
